--- a/templates/info.html
+++ b/templates/info.html
@@ -23,13 +23,12 @@
 
          <div class="Content">
              <div class="what">
-                 <h1>What is a Adult Census for Income?</h1>
+                 <h1>What is a Concrete Strength?</h1>
              </div>
 
              <div class="what-ans">
                  <p>
-                     Based on certain characterstics like age,gender,country,education,etc a survey is organized to determine the amount of people earning above a certain limit set by government standards.This process is called as Adult Census for Income.
-
+                     The strength can be defined as the ability to resist force. With-regard to concrete for structural pur­poses it can be defined as the unit force required to cause rupture. Strength is a good index of most of the other properties of practical importance. In general stronger concretes are stiffer, more water tight and more resistant to weathering etc.
                  </p>
              </div>
 
@@ -40,13 +39,13 @@
 
              <div class="app-information">
                  <p>
-                     The dataset taken for this application is from 1994 Census bureau database by Ronny Kohavi and Barry Becker.Here there are some
-                     of the features/columns like age,gender,race,country,etc which is used to determine the salary of the candidate below or
-                     above the certain limit.There are also some of the factors like relationship,capital-gain and capital-loss which can largely impact the result
+                     This project will be based on a dataset obtained from the UCI Repository. The dataset consists of 1030 observations under 9 attributes. The attributes consist of 8 quantitative inputs and 1 quantitative output. The dataset does not contain any missing values. The dataset is focused on the compressive strength of a concrete. The attributes include factors that affect concrete strength such as cement, water, aggregate (coarse and fine), and fly ash etc… The objective of this project is trying to predict the concrete compressive strength based important predictors.
+                     A comparative analysis will be performed to identify the best model for our prediction in terms of accuracy. The best model will be helpful for civil engineers in choosing the appropriate concrete for bridges, houses construction.
                  </p>
                  <p>
-                     Here we consider features like age,fnlwgt,gender,country,capital-loss,capital-gain,etc to predict that if the salary is
-                     above or below 50K.To check that is the individual earns more or less than 50K we can make use of this application.
+                     Here we consider features like cement, aggregate, superplasticizer to predict the strength of concrete.
+                     Using these components we try to determine the strength of concrete.The different combinations of these components
+                     can help us determine which combination of these components like water,aggregates,etc is perfect based on certain conditions.
                  </p>
              </div>
 
